// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Checkbox" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: rgb(61, 61, 61);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: #fff;
  font-weight: 300;
  height: 56px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(237, 237, 238);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(237, 237, 238);
  font-size: 11px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(237, 237, 238);
  font-size: 11px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px #696c6e;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0772de url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 8 6"><path fill="white" d="M2.8 6L8 .7 7.3 0 2.8 4.6.7 2.4l-.7.7z"/></svg>') no-repeat center;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0772de;
}

.emotion-3::before {
  background: #fff;
  border: 1px solid #696c6e;
  border-radius: 1px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 16px;
  margin: 4px 8px 0 -16px;
  opacity: 1;
  width: 16px;
}

.emotion-3 a {
  color: #0772de;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(6, 96, 187);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "16px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "16px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 56px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px #696c6e;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0772de url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 8 6"><path fill="white" d="M2.8 6L8 .7 7.3 0 2.8 4.6.7 2.4l-.7.7z"/></svg>') no-repeat center;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0772de;
}

.emotion-3::before {
  background: #fff;
  border: 1px solid #696c6e;
  border-radius: 1px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 16px;
  margin: 4px 8px 0 -16px;
  opacity: 1;
  width: 16px;
}

.emotion-3 a {
  color: #0772de;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(6, 96, 187);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "16px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "16px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders as invalid 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 56px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px #696c6e;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.wireinput:checked+.emotion-3::before {
  background: #0772de url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 8 6"><path fill="white" d="M2.8 6L8 .7 7.3 0 2.8 4.6.7 2.4l-.7.7z"/></svg>') no-repeat center;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0772de;
}

.emotion-3::before {
  background: #fff;
  border: 1px solid #e02020;
  border-radius: 1px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 16px;
  margin: 4px 8px 0 -16px;
  opacity: 1;
  width: 16px;
}

.emotion-3 a {
  color: #0772de;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(6, 96, 187);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      id="1"
      style={
        Object {
          "height": "16px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "16px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders disabled 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background: rgba(71, 73, 75, 0.16000000000000003);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 56px;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 0 16px;
  width: 100%;
}

.emotion-2::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-2::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 11px;
  text-transform: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-2:invalid:not(:focus) {
  box-shadow: 0 0 0 1px #696c6e;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0.56;
}

.wireinput:checked+.emotion-3::before {
  background: #0772de url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="12" height="10" viewBox="0 0 8 6"><path fill="white" d="M2.8 6L8 .7 7.3 0 2.8 4.6.7 2.4l-.7.7z"/></svg>') no-repeat center;
}

.wireinput:focus+.emotion-3::before {
  border-color: #0772de;
}

.emotion-3::before {
  background: #fff;
  border: 1px solid #696c6e;
  border-radius: 1px;
  box-sizing: border-box;
  content: "";
  display: inline-block;
  height: 16px;
  margin: 4px 8px 0 -16px;
  opacity: 0.56;
  width: 16px;
}

.emotion-3 a {
  color: #0772de;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-3 a:hover {
  color: rgb(6, 96, 187);
}

.emotion-3 a:visited,
.emotion-3 a:link,
.emotion-3 a:active {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <input
      className="wireinput emotion-2"
      disabled={true}
      id="1"
      style={
        Object {
          "height": "16px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "16px",
        }
      }
      type="checkbox"
    />
    <label
      className="emotion-3"
      disabled={true}
      htmlFor="1"
    >
      Check
    </label>
  </div>
</div>
`;

exports[`"CheckboxLabel" renders 1`] = `
.emotion-0 {
  background: rgb(237, 237, 238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
}

.emotion-1 a {
  color: rgb(29, 30, 31);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Label
  </span>
</div>
`;
